<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="humidity_title">Humidity</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_title">Wind</string>
    <string name="city_manager_menu">My Cities</string>
    <string name="home_menu">Home</string>
    <string name="forecast_menu">Forecast</string>
    <string name="alert_dialog_ok">ok</string>
    <string name="alert_dialog_cancel">cancel</string>
    <string name="dialog_title">Find your city</string>
    <string name="city_hint">City name</string>
    <string name="error_title">Sorry!</string>
    <string name="error">Something went wrong!\nCheck the network connection!</string>
    <string name="try_again">try again</string>
    <string name="temperature_title">Temperature</string>
    <string name="dialog_limit_title">Warning</string>
    <string name="dialog_limit_message">You can\'t delete all cities. You must keep one :)</string>
</resources>
